--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN" "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
-<title>MerryChristmas</title>
+<title>html5写的3D逼真圣诞树效果</title>
 <meta charset="utf-8" >
 <style>
 html, body { width: 100%; height: 100%; margin: 0; padding: 0; border: 0; }
@@ -20,42 +20,7 @@ div { margin: 0; padding: 0; border: 0; }
  
 			a { color: black; text-decoration: none; border-bottom: 1px dashed black; }
 			a:hover { border-bottom: 1px solid red; }
-      canvas{
-          width: 100%;
-          height: 100%;
-      }
-      html,
-      body {
-          width: 100%;
-          height: 100%;
-          margin: 0;
-          padding: 0;
-          border: 0;
-      }
-
-      div {
-          margin: 0;
-          padding: 0;
-          border: 0;
-      }
-
-      .nav {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 27px;
-          background-color: white;
-          color: black;
-          text-align: center;
-          line-height: 25px;
-      }
-
-      a {
-          color: black;
-          text-decoration: none;
-          border-bottom: 1px dashed black;
-      }
+ 
 			.previous { float: left; margin-left: 10px; }
 			.next { float: right; margin-right: 10px; }
 			
