--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><link rel="stylesheet" href="/reset.css"><link rel="stylesheet" href="https://at.alicdn.com/t/font_3286257_7tgeocoh7r3.css"><title>app</title><script defer="defer" type="module" src="/js/chunk-vendors.0b6ed7d0.js"></script><script defer="defer" type="module" src="/js/app.067e8764.js"></script><link href="/css/app.decb7ec9.css" rel="stylesheet"><script defer="defer" src="/js/chunk-vendors-legacy.85150b69.js" nomodule></script><script defer="defer" src="/js/app-legacy.11233e5e.js" nomodule></script></head><body><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <img
+    src="https://gimg2.baidu.com/image_search/src=http%3A%2F%2Fimg.jj20.com%2Fup%2Fallimg%2F1114%2F113020142315%2F201130142315-1-1200.jpg&refer=http%3A%2F%2Fimg.jj20.com&app=2002&size=f9999,10000&q=a80&n=0&g=0n&fmt=auto?sec=1653492544&t=0f304f9a4343958cd09b26262aab187a"
+    alt="">
+</body>
+
+</html>
